Principal Component Analysis

--- a/Starter_Code/Crypto_Clustering.ipynb
+++ b/Starter_Code/Crypto_Clustering.ipynb
@@ -2057,23 +2057,55 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a list with the number of k-values from 1 to 11\n"
+    "# Create a list with the number of k-values from 1 to 11\n",
+    "best_k = list(range(1, 11))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Public\\Newfolder\\envs\\dev\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1446: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Public\\Newfolder\\envs\\dev\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1446: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Public\\Newfolder\\envs\\dev\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1446: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Public\\Newfolder\\envs\\dev\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1446: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Public\\Newfolder\\envs\\dev\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1446: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Public\\Newfolder\\envs\\dev\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1446: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Public\\Newfolder\\envs\\dev\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1446: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Public\\Newfolder\\envs\\dev\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1446: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Public\\Newfolder\\envs\\dev\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1446: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\Public\\Newfolder\\envs\\dev\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1446: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an empty list to store the inertia values\n",
-    "\n",
+    "inertia_2 = []\n",
     "\n",
     "# Create a for loop to compute the inertia with each possible value of k\n",
+    "for i in k:\n",
     "# Inside the loop:\n",
     "# 1. Create a KMeans model using the loop counter for the n_clusters\n",
+    "    best_k_pca = KMeans(n_clusters=i, random_state=42)\n",
     "# 2. Fit the model to the data using `df_market_data_pca`\n",
-    "# 3. Append the model.inertia_ to the inertia list\n"
+    "    best_k_pca.fit(crypto_pca_df)\n",
+    "# 3. Append the model.inertia_ to the inertia list\n",
+    "inertia_2.append(best_k_pca.inertia_)"
    ]
   },
   {
@@ -2083,8 +2115,10 @@
    "outputs": [],
    "source": [
     "# Create a dictionary with the data to plot the Elbow curve\n",
+    "e_curve = {\"k\":k, \"inertia\":inertia_2}\n",
     "\n",
-    "# Create a DataFrame with the data to plot the Elbow curve\n"
+    "# Create a DataFrame with the data to plot the Elbow curve\n",
+    "e_curve_df = "
    ]
   },
   {
